--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -11,6 +11,17 @@ block content
       h1 Choreography
       .choreo-box
         .copy
+          h4 Scale
+          h6 (2017)
+          p.
+            Choreographed by Emily Hansel<br>
+            Performed by Rachel Berryman, Malia Byrne, Katie House, and Nick Wagner
+          p.
+            <i>Scale</i> was presented by the Young Choreographers' Forum SF at
+            the Joe Goode Annex in March, 2017.
+        iframe.visual(src="https://www.youtube.com/embed/RomHWxPiTZU?rel=0&amp;showinfo=0" height="240px" frameborder="0" allowfullscreen)
+      .choreo-box
+        .copy
           h4 untitled_37.txt
           h6 (2016)
           p.
@@ -35,14 +46,16 @@ block content
           h6 (2015)
           p.
             Choreographed by Emily Hansel for five dancers<br>
-            Music by Ratatat
+            Music by Ratatat<br>
+            Originally performed by Natalie Bohin, Katie Kulasa, Raven Moore, Brent Townend, and Demetrius Tucker
           p.
             A piece in which there is a reason for everything. An environment in which five movers exist and discover.
           p.
             <i>No Reason</i> premiered at the University of South Florida’s
-            Theatre One in December 2015.  It was later selected to be presented
-            at the Southeast ACDA Conference in March 2016.
-
+            Theatre One in December 2015.  It was later selected to be presented at
+            the 2016 Southeast ACDA Conference, where it received rave
+            reviews from the adjudicators for its originality as a
+            “sophisticated fusion of dance theater, improvisation, and contemporary movement.”
         img.visual(src="../assets/img/choreo/noreason.png" alt="No Reason")
       .choreo-box
         .copy
@@ -80,17 +93,17 @@ block content
           h4 Insatiable
           h6 (2015)
           p.
-            Choreographed and performed by Emily Hansel and Jessica Zizzo.<br>Music by ltlp, additional audio from Patrick McCarty.
+            Choreographed and performed by Emily Hansel and Jessica Zizzo.<br>
+            Music by ltlp, additional audio from Patrick McCarty.
           p.
-            Insatiable was created in 2015 at the University of South Florida. It is the product of an exploration
-            of the benefits and downfalls of selfishness and unceasing ambition – such persistence can lead to great
-            accomplishments as well as disasters. This includes an investigation of Plato and Aristotle’s ideas on
-            human appetite (or passion) versus reason (which allegedly governs the passions).
-          p.
-            The piece was invited to be performed in a full-scale concert in USF's dance department
-            as well as other performances at USF. This successful partnership between these two
-            choreogrpahers has led to further collaboration. Right now, the two are in the process
-            of creating an e-book which cohesively incorporates dance and poetry (with poetry by Patrick McCarty).
+            <i>Insatiable</i> was created in 2015 at the University of South Florida.
+            It is the product of an exploration of the benefits and downfalls
+            of selfishness and unceasing ambition – such persistence can lead
+            to great accomplishments as well as disasters. This includes
+            an investigation of Plato and Aristotle’s ideas on human
+            appetite (or passion) versus reason (which governs the passions).
+            The piece was invited to be performed in a full-scale concert
+            in USF's dance department as well as other performances at USF.
         iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
       .choreo-box
         .copy
