--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,6 @@
 @import 'https://fonts.googleapis.com/css?family=Titillium+Web';
 @import 'https://fonts.googleapis.com/css?family=Lato:100,300,400';
-@import "http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css";
+@import "https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css";
 @import url(animate.css);
 @-webkit-keyframes fadeIn {
   0% {
