--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -8,10 +8,10 @@ html
     link(rel="shortcut icon", href="/assets/img/favicon2.ico")
     link(rel="icon", href="/assets/img/favicon2.ico", type="image/x-icon")
     meta(property="og:title" content="Emily Hansel")
-    meta(property="og:description" content="dancer | choreographer")  
+    meta(property="og:description" content="dancer | choreographer")
     meta(property="og:type" content="website")
-    meta(property="og:url" content="http://emilyhansel.me")
-    meta(property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG")
+    meta(property="og:url" content="https://emilyhansel.me")
+    meta(property="og:image" content="https://emilyhansel.me/assets/img/facebook.PNG")
     block title
   body
     .nav-opener
@@ -36,7 +36,7 @@ html
           span.contact contact
     .contact-form
       span x
-      form(method="POST", action="http://formspree.io/emilylhansel@gmail.com")
+      form(method="POST", action="https://formspree.io/emilylhansel@gmail.com")
         p Fill out the form below to contact me
         input(tabindex="1"  type="text" name="name" placeholder="Name")
         input(tabindex="2"  type="email" name="_replyto" placeholder="Email")
