--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -11,6 +11,16 @@ block content
       h1 Choreography
       .choreo-box
         .copy
+          h4 Vertical Words
+          h6 (2018)
+          p.
+            Choreographed by Emily Hansel<br>
+            Performed by Emily Hansel, Moses Kaplan, and Chelsea Reichert
+          p.
+            <i>Vertical Words</i> was presented at CounterPulse in January, 2018. An abridged version was performed at LEVYsalon in April, 2018.
+        img.visual(src="../assets/img/choreo/levysalon.jpg" alt="Vertical Words, performed at LEVYsalon")
+      .choreo-box
+        .copy
           h4 Scale
           h6 (2017)
           p.
