--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1067,6 +1067,13 @@ h4 {
         -webkit-animation-delay: 1400ms;
         -moz-animation-delay: 1400ms;
         animation-delay: 1400ms; }
+      .choreo .choreo-container .choreo-box:nth-of-type(8) {
+        -webkit-animation: fadeIn 300ms linear forwards;
+        -moz-animation: fadeIn 300ms linear forwards;
+        animation: fadeIn 300ms linear forwards;
+        -webkit-animation-delay: 1600ms;
+        -moz-animation-delay: 1600ms;
+        animation-delay: 1600ms; }
 
 @media screen and (max-width: 700px) {
   .choreo .choreo-container .choreo-box:nth-of-type(n) {
