--- a/photo/index.pug
+++ b/photo/index.pug
@@ -12,15 +12,18 @@ block content
       .prev &lt;
       .next &gt;
       .carousel
-        img(src="../assets/img/dancing/carousel/1.jpg"  height="200px" data-caption="<small>2016<br>Photograph by Jason Lam</small>" )
+        //- - var values = { 11: '<small>2018<br>Photograph by Stephen Texeira</small>' }
+        //- each val, index in values
+        //-   img(src="../assets/img/dancing/carousel/" + index + "}.jpg"  height="200px" data-caption=val)
+        img(src="../assets/img/dancing/carousel/11.jpg"  height="200px" data-caption="<small>2018<br>Photograph by Stephen Texeira</small>")
+        img(src="../assets/img/dancing/carousel/10.jpg"  height="200px" data-caption="<small>2018<br>Photograph by Stephen Texeira</small>")
+        img(src="../assets/img/dancing/carousel/12.jpg"  height="200px" data-caption="<i>Point of Dissolve</i><br><small>2017<br>Photograph for The Anata Project courtesy of Meets the Eye Studios</small>")
         img(src="../assets/img/dancing/carousel/2.jpg"  height="200px" data-caption="<i>Threshold</i><small><br>2015<br>Choreography by Andrew Carroll<br>Photograph by Kyle Scharf</small>" )
-        img(src="../assets/img/dancing/carousel/3.jpg"  height="200px" data-caption="<i>Unkindness of Ravens</i><small><br>2014<br>Choreography by Carl Flink<br>Photograph by Tiffany Schrepferman</small>" )
         img(src="../assets/img/dancing/carousel/4.jpg"  height="200px" data-caption="<i>Cause</i><small><br>2016<br>Choreography by Robert Moses<br>Photograph by Kyle Scharf</small>")
         img(src="../assets/img/dancing/carousel/5.jpg"  height="200px" data-caption="<i>Fingerprints</i><small><br>2016<br>Choreography by Paula Nunez<br>Photograph by Kyle Scharf</small>")
-        img(src="../assets/img/dancing/carousel/6.jpg"  height="200px" data-caption="<i>If this continues…</i><small><br>2015<br>Choreography by Alyssa Marchand<br>Photograph by Candace Kaw</small>")
         img(src="../assets/img/dancing/carousel/7.jpg"  height="200px" data-caption="<i>KOTO</i><small><br>2015<br>Choreography by Alonzo King<br>Photrograph by Kyle Scharf</small>")
-        img(src="../assets/img/dancing/carousel/8.jpg"  height="200px" data-caption="<i>Picture in a Frame</i><small><br>2013<br>Choreography by Bliss Kohlmyer<br>Photograph by Candace Kaw</small>")
         img(src="../assets/img/dancing/carousel/9.jpg"  height="200px" data-caption="<i>3:00am</i><small><br>2014/2016<br>Choreography by Andrew Carroll<br>Photograph by Candace Kaw/Soho Images</small>")
+        img(src="../assets/img/dancing/carousel/1.jpg"  height="200px" data-caption="<small>2016<br>Photograph by Jason Lam</small>" )
       .caption
 block scripts
   script(src="../assets/js/jquery.js")
