use jquery from cdn

--- a/photo/index.pug
+++ b/photo/index.pug
@@ -26,7 +26,7 @@ block content
         img(src="../assets/img/dancing/carousel/1.jpg"  height="200px" data-caption="<small>2016<br>Photograph by Jason Lam</small>" )
       .caption
 block scripts
-  script(src="../assets/js/jquery.js")
-  script(src="../assets/js/jquery.mousewheel.min.js")
+  script(src="https://code.jquery.com/jquery-3.3.1.min.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js")
   script(src="../assets/js/carousel.js")
   script sessionStorage.seen = true;
