--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -51,6 +51,6 @@ html
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-83432320-1', 'auto');
       ga('send', 'pageview');
-    script(src="/assets/js/jquery.js")
+    script(src="https://code.jquery.com/jquery-3.3.1.min.js")
     script(src="/assets/js/index.js")
     block scripts
