--- a/video/index.pug
+++ b/video/index.pug
@@ -26,7 +26,7 @@ block content
           iframe(src="https://www.youtube.com/embed/zqiOqTy0BWk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
       .caption
 block scripts
-  script(src="../assets/js/jquery.js")
-  script(src="../assets/js/jquery.mousewheel.min.js")
+  script(src="https://code.jquery.com/jquery-3.3.1.min.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js")
   script(src="../assets/js/carousel.js")
   script sessionStorage.seen = true;
