--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -11,6 +11,15 @@ block content
       h1 Choreography
       .choreo-box
         .copy
+          h4 PHANTOM
+          h6 (2019)
+          p.
+            Directed, choreographed, and performed by Emily Hansel<br>
+          p.
+            <i>PHANTOM</i> was developed during a residency at SAFEhouse Arts and premiered at SAFEhouse in January, 2019.
+        iframe.visual(src="https://www.youtube.com/embed/uJ4H6y7Gza8?showinfo=0" height="240px" frameborder="0" allowfullscreen)
+      .choreo-box
+        .copy
           h4 Vertical Words
           h6 (2018)
           p.
