Not empty: video -> img

--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -96,7 +96,7 @@ block content
             audiences through romanticism, narrative, or encoded meanings. They often referred
             to their work as "meaningless" or "purposeless." But this attempt to signify nothing
             signifies something. The attempt to remove purpose is a purpose itself.
-        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/L8l2vXdaTiY?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+        img.visual(src="../assets/img/not-empty.png" alt="Not Empty")
       .choreo-box
         .copy
           h4 Insatiable
