update no reason copy

--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -83,19 +83,7 @@ block content
           p Choreographed, performed, and directed by Emily Hansel.
           p.
             This film is a response to a performance of Angelin Preljocaj's "Empty Moves"
-            (performed by Ballet Preljocaj). The show's program notes included this statement:
-          p.
-            “To highlight his process [Preljocaj] turns to John Cage’s "Empty Words," a
-            random string of phonemes, read by Cage during his performance in Milan – a
-            demonstrative act to show that the abstract exists and that it is unbearable
-            to the audience who responds by jeering at the unperturbed performer….[Preljocaj's
-            four dancers onstage] are paid homage by an audience, who although not
-            necessarily willing to listen, has at least agreed to look upon abstraction.”
-          p.
-            John Cage and his partner Merce Cunningham were two artists who refused to seduce
-            audiences through romanticism, narrative, or encoded meanings. They often referred
-            to their work as "meaningless" or "purposeless." But this attempt to signify nothing
-            signifies something. The attempt to remove purpose is a purpose itself.
+            (performed by Ballet Preljocaj).
         img.visual(src="../assets/img/not-empty.png" alt="Not Empty")
       .choreo-box
         .copy
