--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -94,14 +94,7 @@ block content
             Music by ltlp, additional audio from Patrick McCarty.
           p.
             <i>Insatiable</i> was created in 2015 at the University of South Florida.
-            It is the product of an exploration of the benefits and downfalls
-            of selfishness and unceasing ambition – such persistence can lead
-            to great accomplishments as well as disasters. This includes
-            an investigation of Plato and Aristotle’s ideas on human
-            appetite (or passion) versus reason (which governs the passions).
-            The piece was invited to be performed in a full-scale concert
-            in USF's dance department as well as other performances at USF.
-        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+        img.visual(src="../assets/img/insatiable.png" alt="Insatiable")
       .choreo-box
         .copy
           h4 Scream
