new pages without borders

--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -4,7 +4,7 @@ block title
   link(rel="stylesheet", href="../assets/css/index.css")
 block content
   .home-button
-    a(href="/" alt="Emily") E
+    a(href="/" alt="Emily")
       img.flip(src="../assets/img/dancing/crop/2.png")
   .choreo
     .choreo-container
