--- a/video/index.pug
+++ b/video/index.pug
@@ -7,7 +7,7 @@ block title
 block content
   .media
     .home-button
-      a(href="/" alt="Emily") E
+      a(href="/" alt="Emily")
         img(src="../assets/img/dancing/crop/5.png")
     h1#photo Video
     .media-container.video-container
