--- a/index.pug
+++ b/index.pug
@@ -22,9 +22,9 @@ block content
           li
             a.site-link(href="/choreography" alt="choreography") choreography
           li
-            a.site-link(href="/statement" alt="artist statement") artist statement
+            a.site-link(href="/digital-art" alt="digital art statement") digital art
       .menu-item
-        span.menu-button  media
+        span.menu-button  galleries
         ul.sub-menu
           li
             a.site-link(href="/photo" alt="photo") photo
