--- a/photo/index.pug
+++ b/photo/index.pug
@@ -5,7 +5,7 @@ block title
 block content
   .media
     .home-button
-      a(href="/" alt="Emily") E
+      a(href="/" alt="Emily")
         img(src="../assets/img/dancing/crop/4.png")
     h1#photo Photo
     .media-container.photo-container
