--- a/sass/index.sass
+++ b/sass/index.sass
@@ -34,8 +34,7 @@
   z-index: 800
   top: 10px
   left: 25px
-  padding: 0px 5px 3px
-  border: 4px solid white
+  padding: 0px
   a
     display: flex
     height: 72px
