update pages with more borderless content

--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -47,16 +47,11 @@ block content
             Choreographed and performed by Emily Hansel<br>
             Computer program by Michael Fix
           p.
-            <i>untitled_37.txt</i> was the culmination of over a year’s worth of
-            research on the subjectivity of language. Words are not equivalent
-            to ideas, they simply represent ideas. Words attempt to
-            accurately portray the abstract in a concrete manner. The research
-            developed into an exploration of the human need to make the abstract tangible.
-          p.
             <i>untitled_37.txt</i> premiered on April 27, 2016 at the
             University of South Florida. This piece was the fruit of Emily’s
             <a href="/assets/thesis.pdf" target="_blank" alt="Honors Thesis">Honors Thesis</a>
-            for the Honors College at USF.
+            for the Honors College at USF. <i>untitled_37.txt</i> was the culmination of over a year’s worth of
+            research on the subjectivity of language.
         iframe.visual(src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;showinfo=0" height="240px" frameborder="0" allowfullscreen)
         //- img.visual(src="../assets/img/choreo/untitled37.png" alt="Untitled_37.txt")
       .choreo-box
@@ -67,8 +62,6 @@ block content
             Choreographed by Emily Hansel for five dancers<br>
             Music by Ratatat<br>
             Originally performed by Natalie Bohin, Katie Kulasa, Raven Moore, Brent Townend, and Demetrius Tucker
-          p.
-            A piece in which there is a reason for everything. An environment in which five movers exist and discover.
           p.
             <i>No Reason</i> premiered at the University of South Florida’s
             Theatre One in December 2015.  It was later selected to be presented at
@@ -81,9 +74,6 @@ block content
           h4 Not Empty
           h6 (2015)
           p Choreographed, performed, and directed by Emily Hansel.
-          p.
-            This film is a response to a performance of Angelin Preljocaj's "Empty Moves"
-            (performed by Ballet Preljocaj).
         img.visual(src="../assets/img/not-empty.png" alt="Not Empty")
       .choreo-box
         .copy
@@ -103,7 +93,6 @@ block content
             Choreographed by Emily Hansel.<br>
             Performed by Hannah Luckow, Alyssa Marchand, Robert Kelley, Hannah Mainellis, Monica Moneses, Cloe Leppard, and Dayne Davis.<br>
             Music by Philip Glass and Yo-Yo Ma.<br>
-          p Inspired by Edvard Munch's "The Scream."
         img.visual(src="../assets/img/choreo/scream.png" alt="Scream")
     include ../pug/_footer.pug
 
