--- a/photo/index.pug
+++ b/photo/index.pug
@@ -28,5 +28,6 @@ block content
 block scripts
   script(src="https://code.jquery.com/jquery-3.3.1.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js")
+  script(src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js")
   script(src="../assets/js/carousel.js")
   script sessionStorage.seen = true;
