--- a/index.pug
+++ b/index.pug
@@ -12,24 +12,18 @@ block content
       .menu-item
         span.menu-button about
         ul.sub-menu
-          li
-            a.site-link(href="/bio" alt="bio") bio
-          li
-            a.site-link(href="/assets/resume.pdf" target="_blank" alt="resume") resume
+          li: a.site-link(href="/bio" alt="bio") bio
+          li: a.site-link(href="/assets/resume.pdf" target="_blank" alt="resume") resume
       .menu-item
         span.menu-button works
         ul.sub-menu
-          li
-            a.site-link(href="/choreography" alt="choreography") choreography
-          li
-            a.site-link(href="/digital-art" alt="digital art statement") digital art
+          li: a.site-link(href="/choreography" alt="choreography") choreography
+          li: a.site-link(href="/digital-art" alt="digital art statement") digital art
       .menu-item
         span.menu-button  galleries
         ul.sub-menu
-          li
-            a.site-link(href="/photo" alt="photo") photo
-          li
-            a.site-link(href="/video" alt="video") video
+          li: a.site-link(href="/photo" alt="photo") photo
+          li: a.site-link(href="/video" alt="video") video
       .menu-item
         span.menu-button.contact contact
       .dancing-image
