--- a/sass/_choreography.sass
+++ b/sass/_choreography.sass
@@ -9,19 +9,22 @@
     font-family: $font-lato
     width: 70%
     left: 50%
+    text-align: end
+    margin-bottom: 40px
+
     h1
       text-align: left
       font-size: 40px
       font-weight: 100
       text-transform: uppercase
       color: white
-      margin: 0 auto
+      margin: 0 auto 64px
+      padding: 5px 0px
 
     h4
       text-transform: none
       font-weight: bold
       letter-spacing: 0px
-      text-align: center
       &:after
         content: ''
     h6
@@ -29,10 +32,8 @@
       color: white
       font-size: 18px
       font-weight: lighter
-      text-align: center
 
     p
-      text-align: left
       font-weight: 300
 
     a
@@ -42,27 +43,28 @@
 
     .choreo-box
       display: flex
-      justify-content: center
+      justify-content: space-between
       align-items: center
       margin-top: 30px
       // margin-bottom: 50px
       padding-bottom: 40px
       padding-top: 30px
-      border-bottom: 4px solid white
+      // border-bottom: 4px solid white
       opacity: 0
 
       .visual
         border: 4px solid white
+        user-select: none
 
       .visual, .copy
         width: 45%
-        margin: 0 2.5%
       &:last-child
         border-bottom: none
       &:nth-last-of-type(2n)
         flex-direction: row
       &:nth-last-of-type(2n+1)
         flex-direction: row-reverse
+        text-align: start
 
       @for $i from 1 through 9
         &:nth-of-type(#{$i})
