--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -3,7 +3,6 @@
   .home-button
     left: 5px
   h1
-    text-align: left
     font-size: 40px
     font-weight: 100
     text-transform: uppercase
@@ -40,12 +39,6 @@
       z-index: 999
       float: right
       right: 5%
-
-
-    &.video-container
-      .carousel
-        transform: translateY(-100px)
-        height: 80vh
 
 
   .carousel
@@ -87,6 +80,29 @@
     small
       font-size: medium
 
+.video-container
+  position: relative
+  display: flex
+  margin-top: 32px
+  flex-direction: column
+  align-items: center
+  width: 50vw
+  left: 50%
+  transform: translateX(-50%)
 
-.video-container .caption
-  margin-top: -120px
+  h1 
+    align-self: flex-start
+    margin: 0 0 64px
+
+  .card
+    border: 4px solid white
+    width: 100%
+    height: 28vw
+
+  .caption
+    color: white
+    margin: 16px 0 64px
+
+  iframe 
+    width: 100%
+    height: 100%
