upgrade ionicons, include instagram link

--- a/index.pug
+++ b/index.pug
@@ -26,6 +26,10 @@ block content
           li: a.site-link(href="/video" alt="video") video
       .menu-item
         span.menu-button.contact contact
+      .menu-item
+        span.menu-button
+          a(href="https://www.instagram.com/em_hansel/" target="_blank" rel="noreferrer noopener")
+            ion-icon(name="logo-instagram")
       .dancing-image
   //- img.leftImage(src='assets/img/dancing/5.png')
   .load-images(style="display: none;")
@@ -42,3 +46,4 @@ block content
     img(src='assets/img/dancing/11.png')
 block scripts
   script(src="./assets/js/app.js")
+  script(src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js")
