--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -15,7 +15,7 @@ html
     block title
   body
     .nav-opener
-      i.ion-navicon
+      ion-icon(name="menu-outline")
     .mobile-nav
       .nav-items
         .nav-item
@@ -27,7 +27,7 @@ html
         .nav-item
           a.site-link(href="/choreography" alt="choreography") choreography
         .nav-item
-          a.site-link(href="/statement" alt="artist statement") artist statement
+          a.site-link(href="/digital-art" alt="digital art") digital art
         .nav-item
           a.site-link(href="/photo" alt="photo") photo
         .nav-item
