--- a/sass/index.sass
+++ b/sass/index.sass
@@ -113,9 +113,8 @@
   z-index: 2
   position: fixed
   display: none
-  width: 550px
   max-width: 90%
-  padding: 12px 12px 32px
+  padding: 16px 24px
   left: 50%
   top: 50%
   margin-top: -140px
@@ -124,12 +123,11 @@
   background-color: white
   transform-origin: bottom left
   form
-    text-align: center
+    text-align: left
   p
     color: black
-    margin: 0px 0px 12px 28px
+    margin: 0px 0px 16px
     letter-spacing: .2px
-    text-align: left
   a
     color: $form-color
     &:hover
@@ -152,26 +150,26 @@
       border-color: lighten($form-color, 10%)
 
   input:not([type='submit'])
-    margin: 0 0.5%
+    margin: 0
     height: 3em
     padding: 5px
-    width: 44%
+    width: calc(50% - 4px)
   textarea
-    width: 90%
+    width: 100%
     height: 10em
-    margin: 10px auto
+    margin: 12px 0
 
   input[type='submit']
     background-color: $form-color
     cursor: pointer
     color: white
-    width: 90%
+    width: 100%
     height: 3em
+    margin-top: 8px
 
     &:hover, &:focus
       background-color: lighten($form-color, 10%)
       border-color: lighten($form-color, 10%)
-
 
 .dancing-image
   position: absolute
