--- a/photo/index.pug
+++ b/photo/index.pug
@@ -9,25 +9,63 @@ block content
         img(src="../assets/img/dancing/crop/4.png")
     h1#photo Photo
     .media-container.photo-container
-      .prev &lt;
-      .next &gt;
-      .carousel
-        //- - var values = { 11: '<small>2018<br>Photograph by Stephen Texeira</small>' }
+      div(class="grid js-masonry" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 266 }')
+        
         //- each val, index in values
-        //-   img(src="../assets/img/dancing/carousel/" + index + "}.jpg"  height="200px" data-caption=val)
-        img(src="../assets/img/dancing/carousel/11.jpg"  height="200px" data-caption="<small>2018<br>Photograph by Stephen Texeira</small>")
-        img(src="../assets/img/dancing/carousel/10.jpg"  height="200px" data-caption="<small>2018<br>Photograph by Stephen Texeira</small>")
-        img(src="../assets/img/dancing/carousel/12.jpg"  height="200px" data-caption="<i>Point of Dissolve</i><br><small>2017<br>Photograph for The Anata Project courtesy of Meets the Eye Studios</small>")
-        img(src="../assets/img/dancing/carousel/2.jpg"  height="200px" data-caption="<i>Threshold</i><small><br>2015<br>Choreography by Andrew Carroll<br>Photograph by Kyle Scharf</small>" )
-        img(src="../assets/img/dancing/carousel/4.jpg"  height="200px" data-caption="<i>Cause</i><small><br>2016<br>Choreography by Robert Moses<br>Photograph by Kyle Scharf</small>")
-        img(src="../assets/img/dancing/carousel/5.jpg"  height="200px" data-caption="<i>Fingerprints</i><small><br>2016<br>Choreography by Paula Nunez<br>Photograph by Kyle Scharf</small>")
-        img(src="../assets/img/dancing/carousel/7.jpg"  height="200px" data-caption="<i>KOTO</i><small><br>2015<br>Choreography by Alonzo King<br>Photrograph by Kyle Scharf</small>")
-        img(src="../assets/img/dancing/carousel/9.jpg"  height="200px" data-caption="<i>3:00am</i><small><br>2014/2016<br>Choreography by Andrew Carroll<br>Photograph by Candace Kaw/Soho Images</small>")
-        img(src="../assets/img/dancing/carousel/1.jpg"  height="200px" data-caption="<small>2016<br>Photograph by Jason Lam</small>" )
-      .caption
+        //-   img(src="../assets/img/dancing/carousel/" + index + "}.jpg"  width="100%" data-caption=val)
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/5.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/7.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/8.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/9.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/10.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/11.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/12.png" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/13.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/masonry/14.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+          
+        div.grid-item
+          img(src="../assets/img/dancing/carousel/11.jpg" data-action="zoom" data-caption="2018 | Photograph by Stephen Texeira")
+        div.grid-item
+          img(src="../assets/img/dancing/carousel/10.jpg" data-action="zoom" data-caption="2018 | Photograph by Stephen Texeira")
+        div.grid-item
+          img(src="../assets/img/dancing/carousel/12.jpg" data-action="zoom" data-caption="<i>Point of Dissolve</i> | 2017 | Photograph for The Anata Project courtesy of Meets the Eye Studios")
+        div.grid-item
+          img(src="../assets/img/dancing/carousel/2.jpg" data-action="zoom" data-caption="<i>Threshold</i> | 2015 | Choreography by Andrew Carroll | Photograph by Kyle Scharf")
+        div.grid-item
+          img(src="../assets/img/dancing/carousel/4.jpg" data-action="zoom" data-caption="<i>Cause</i> | 2016 | Choreography by Robert Moses | Photograph by Kyle Scharf")
+        div.grid-item
+          img(src="../assets/img/dancing/carousel/5.jpg" data-action="zoom" data-caption="<i>Fingerprints</i> | 2016 | Choreography by Paula Nunez | Photograph by Kyle Scharf")
+        div.grid-item
+          img(src="../assets/img/dancing/carousel/7.jpg" data-action="zoom" data-caption="<i>KOTO</i> | 2015 | Choreography by Alonzo King | Photrograph by Kyle Scharf")
+        div.grid-item
+          img(src="../assets/img/dancing/carousel/9.jpg" data-action="zoom" data-caption="<i>3:00am</i> | 2014/2016 | Choreography by Andrew Carroll | Photograph by Candace Kaw/Soho Images")
+        div.grid-item
+          img(src="../assets/img/dancing/carousel/1.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam" )
+
+    .caption
 block scripts
   script(src="https://code.jquery.com/jquery-3.3.1.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js")
   script(src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js")
   script(src="../assets/js/carousel.js")
+  script(src="../assets/js/zoom.js")
   script sessionStorage.seen = true;
