--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -40,6 +40,32 @@
       float: right
       right: 5%
 
+  .grid
+    width: 800px
+
+  .grid-item
+    padding: 8px
+    width: 250px
+
+    img
+      width: 100%
+      height: 156px
+
+  .photo-container
+    .caption
+      position: fixed
+      bottom: 12px
+      width: 100%
+      z-index: 999
+      text-align: center
+      color: white
+      font-size: medium
+      font-family: $font-lato
+      font-weight: 100
+      margin-top: 100px
+
+      i
+        margin-right: 2px
 
   .carousel
     width: 100%
@@ -68,18 +94,6 @@
           height: 350px
           cursor: zoom-out
 
-  .caption
-    text-align: center
-    display: inline-block
-    color: white
-    font-size: 25px
-    font-family: $font-lato
-    font-weight: 100
-    margin-top: 100px
-
-    small
-      font-size: medium
-
 .video-container
   position: relative
   display: flex
@@ -90,7 +104,7 @@
   left: 50%
   transform: translateX(-50%)
 
-  h1 
+  h1
     align-self: flex-start
     margin: 0 0 64px
 
@@ -103,6 +117,50 @@
     color: white
     margin: 16px 0 64px
 
-  iframe 
+  iframe
     width: 100%
     height: 100%
+
+img[data-action="zoom"]
+  cursor: pointer
+  cursor: -webkit-zoom-in
+  cursor: -moz-zoom-in
+
+.zoom-img,
+.zoom-img-wrap
+  position: relative
+  z-index: 666
+  -webkit-transition: all 300ms
+  -o-transition: all 300ms
+  transition: all 300ms
+
+img.zoom-img
+  cursor: pointer
+  cursor: -webkit-zoom-out
+  cursor: -moz-zoom-out
+
+.zoom-overlay
+  z-index: 420
+  background: black
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  pointer-events: none
+  filter: "alpha(opacity=0)"
+  opacity: 0
+  -webkit-transition: opacity 300ms ease-in-out
+  -o-transition: opacity 300ms ease-in-out
+  transition: opacity 300ms ease-in-out
+
+  &-open .zoom-overlay
+    filter: "alpha(opacity=100)"
+    opacity: 1
+
+  &-open,
+  &-transitioning
+    cursor: default
+
+  &-transitioning .zoom-overlay
+    opacity: 0
