--- a/video/index.pug
+++ b/video/index.pug
@@ -12,6 +12,10 @@ block content
     .video-container
       h1 Video
       .card
+        iframe.visual(src="https://www.youtube.com/embed/-s8Xh4VSxpA" frameborder="0" allowfullscreen)
+      .caption
+        i Emily Hansel Dance Reel
+      .card
         iframe.visual(src="https://www.youtube.com/embed/uJ4H6y7Gza8?showinfo=0" frameborder="0" allowfullscreen)
       .caption
         i PHANTOM (2019)
