new images, clean up css

--- a/photo/index.pug
+++ b/photo/index.pug
@@ -8,60 +8,60 @@ block content
       a(href="/" alt="Emily")
         img(src="../assets/img/dancing/crop/4.png")
     h1#photo Photo
-    .media-container.photo-container
+    .photo-container
       div(class="grid js-masonry" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 266 }')
         
         //- each val, index in values
         //-   img(src="../assets/img/dancing/carousel/" + index + "}.jpg"  width="100%" data-caption=val)
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/5.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/7.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/8.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/9.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/10.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/11.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/12.png" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/13.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/masonry/14.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/5.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/7.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/8.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/9.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/10.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/11.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/12.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/13.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/14.png" data-action="zoom" data-caption="2016 | Photograph by Jason Lam")
           
-        div.grid-item
-          img(src="../assets/img/dancing/carousel/11.jpg" data-action="zoom" data-caption="2018 | Photograph by Stephen Texeira")
-        div.grid-item
-          img(src="../assets/img/dancing/carousel/10.jpg" data-action="zoom" data-caption="2018 | Photograph by Stephen Texeira")
-        div.grid-item
-          img(src="../assets/img/dancing/carousel/12.jpg" data-action="zoom" data-caption="<i>Point of Dissolve</i> | 2017 | Photograph for The Anata Project courtesy of Meets the Eye Studios")
-        div.grid-item
-          img(src="../assets/img/dancing/carousel/2.jpg" data-action="zoom" data-caption="<i>Threshold</i> | 2015 | Choreography by Andrew Carroll | Photograph by Kyle Scharf")
-        div.grid-item
-          img(src="../assets/img/dancing/carousel/4.jpg" data-action="zoom" data-caption="<i>Cause</i> | 2016 | Choreography by Robert Moses | Photograph by Kyle Scharf")
-        div.grid-item
-          img(src="../assets/img/dancing/carousel/5.jpg" data-action="zoom" data-caption="<i>Fingerprints</i> | 2016 | Choreography by Paula Nunez | Photograph by Kyle Scharf")
-        div.grid-item
-          img(src="../assets/img/dancing/carousel/7.jpg" data-action="zoom" data-caption="<i>KOTO</i> | 2015 | Choreography by Alonzo King | Photrograph by Kyle Scharf")
-        div.grid-item
-          img(src="../assets/img/dancing/carousel/9.jpg" data-action="zoom" data-caption="<i>3:00am</i> | 2014/2016 | Choreography by Andrew Carroll | Photograph by Candace Kaw/Soho Images")
-        div.grid-item
-          img(src="../assets/img/dancing/carousel/1.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam" )
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/carousel/11.jpg" data-action="zoom" data-caption="2018 | Photograph by Stephen Texeira")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/carousel/10.jpg" data-action="zoom" data-caption="2018 | Photograph by Stephen Texeira")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/carousel/12.jpg" data-action="zoom" data-caption="<i>Point of Dissolve</i> | 2017 | Photograph for The Anata Project courtesy of Meets the Eye Studios")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/carousel/2.jpg" data-action="zoom" data-caption="<i>Threshold</i> | 2015 | Choreography by Andrew Carroll | Photograph by Kyle Scharf")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/carousel/4.jpg" data-action="zoom" data-caption="<i>Cause</i> | 2016 | Choreography by Robert Moses | Photograph by Kyle Scharf")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/carousel/5.jpg" data-action="zoom" data-caption="<i>Fingerprints</i> | 2016 | Choreography by Paula Nunez | Photograph by Kyle Scharf")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/carousel/7.jpg" data-action="zoom" data-caption="<i>KOTO</i> | 2015 | Choreography by Alonzo King | Photrograph by Kyle Scharf")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/carousel/9.jpg" data-action="zoom" data-caption="<i>3:00am</i> | 2014/2016 | Choreography by Andrew Carroll | Photograph by Candace Kaw/Soho Images")
+        //- div.grid-item
+        //-   img(src="../assets/img/dancing/carousel/1.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam" )
 
-    .caption
+    .full-screen-caption
 block scripts
   script(src="https://code.jquery.com/jquery-3.3.1.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js")
