add new image for big salt

--- a/photo/index.pug
+++ b/photo/index.pug
@@ -26,6 +26,8 @@ block content
         div.grid-item
           img(src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="Simple Symphony | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019")
         div.grid-item
+          img(src="../assets/img/dancing/masonry/6.5.jpg" data-action="zoom" data-caption="BIG SALT | Photograph by Summer Wilson for The Anata Project | 2019")
+        div.grid-item
           img(src="../assets/img/dancing/masonry/7.jpg" data-action="zoom" data-caption="Concerto Grosso | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019")
         div.grid-item
           img(src="../assets/img/dancing/masonry/8.jpg" data-action="zoom" data-caption="Photograph by Edward Michael for the Anata Project | 2019")
