--- a/photo/index.pug
+++ b/photo/index.pug
@@ -14,54 +14,35 @@ block content
         //- each val, index in values
         //-   img(src="../assets/img/dancing/carousel/" + index + "}.jpg"  width="100%" data-caption=val)
         div.grid-item
-          img(src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="The Exceptionally Elderly Overweight Black Man Phoenix | Choreography by Robert Moses | Photograph by Jim Coleman | 2019")
+          img(src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="<i>The Exceptionally Elderly Overweight Black Man Phoenix</i> | Choreography by Robert Moses | Photograph by Jim Coleman | 2019")
         div.grid-item
-          img(src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="BIG SALT | Photograph by Summer Wilson for The Anata Project | 2019")
+          img(src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="<i>BIG SALT</i> | Photograph by Summer Wilson for The Anata Project | 2019")
         div.grid-item
-          img(src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="Belong Not | Choreography by Chuck Wilt for Post:Ballet | Photograph by Alexander Reneff-Olson | 2020")
+          img(src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="<i>Belong Not</i> | Choreography by Chuck Wilt for Post:Ballet | Photograph by Alexander Reneff-Olson | 2020")
         div.grid-item
-          img(src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="Roaratorio | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019")
+          img(src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="<i>Roaratorio</i> | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019")
         div.grid-item
-          img(src="../assets/img/dancing/masonry/5.jpg" data-action="zoom" data-caption="Biped | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019")
+          img(src="../assets/img/dancing/masonry/5.jpg" data-action="zoom" data-caption="<i>Biped</i> | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019")
         div.grid-item
-          img(src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="Simple Symphony | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019")
+          img(src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="<i>Simple Symphony</i> | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019")
         div.grid-item
-          img(src="../assets/img/dancing/masonry/6.5.jpg" data-action="zoom" data-caption="BIG SALT | Photograph by Summer Wilson for The Anata Project | 2019")
-        div.grid-item
-          img(src="../assets/img/dancing/masonry/7.jpg" data-action="zoom" data-caption="Concerto Grosso | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019")
+          img(src="../assets/img/dancing/masonry/7.jpg" data-action="zoom" data-caption="<i>Concerto Grosso</i> | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019")
         div.grid-item
           img(src="../assets/img/dancing/masonry/8.jpg" data-action="zoom" data-caption="Photograph by Edward Michael for the Anata Project | 2019")
         div.grid-item
-          img(src="../assets/img/dancing/masonry/9.jpg" data-action="zoom" data-caption="The Exceptionally Elderly Overweight Black Man Phoenix | Choreography by Robert Moses | Photograph by Jim Coleman | 2019")
+          img(src="../assets/img/dancing/masonry/9.jpg" data-action="zoom" data-caption="<i>The Exceptionally Elderly Overweight Black Man Phoenix</i> | Choreography by Robert Moses | Photograph by Jim Coleman | 2019")
         div.grid-item
           img(src="../assets/img/dancing/masonry/10.jpg" data-action="zoom" data-caption="Photograph by Stephen Texeira | 2018")
         div.grid-item
           img(src="../assets/img/dancing/masonry/11.jpg" data-action="zoom" data-caption="Photograph by Stephen Texeira | 2018")
         div.grid-item
-          img(src="../assets/img/dancing/masonry/12.jpg" data-action="zoom" data-caption="Point of Dissolve | Photograph for The Anata Project courtesy of Meets the Eye Studios | 2017")
+          img(src="../assets/img/dancing/masonry/12.jpg" data-action="zoom" data-caption="<i>Point of Dissolve</i> | Photograph for The Anata Project courtesy of Meets the Eye Studios | 2017")
         div.grid-item
           img(src="../assets/img/dancing/masonry/13.jpg" data-action="zoom" data-caption="Photograph by Jason Lam | 2016")
         div.grid-item
-          img(src="../assets/img/dancing/masonry/14.png" data-action="zoom" data-caption="KOTO | Choreography by Alonzo King | Photograph by Kyle Scharf | 2015")
-          
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/carousel/11.jpg" data-action="zoom" data-caption="2018 | Photograph by Stephen Texeira")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/carousel/10.jpg" data-action="zoom" data-caption="2018 | Photograph by Stephen Texeira")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/carousel/12.jpg" data-action="zoom" data-caption="<i>Point of Dissolve</i> | 2017 | Photograph for The Anata Project courtesy of Meets the Eye Studios")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/carousel/2.jpg" data-action="zoom" data-caption="<i>Threshold</i> | 2015 | Choreography by Andrew Carroll | Photograph by Kyle Scharf")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/carousel/4.jpg" data-action="zoom" data-caption="<i>Cause</i> | 2016 | Choreography by Robert Moses | Photograph by Kyle Scharf")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/carousel/5.jpg" data-action="zoom" data-caption="<i>Fingerprints</i> | 2016 | Choreography by Paula Nunez | Photograph by Kyle Scharf")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/carousel/7.jpg" data-action="zoom" data-caption="<i>KOTO</i> | 2015 | Choreography by Alonzo King | Photrograph by Kyle Scharf")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/carousel/9.jpg" data-action="zoom" data-caption="<i>3:00am</i> | 2014/2016 | Choreography by Andrew Carroll | Photograph by Candace Kaw/Soho Images")
-        //- div.grid-item
-        //-   img(src="../assets/img/dancing/carousel/1.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam" )
+          img(src="../assets/img/dancing/masonry/14.png" data-action="zoom" data-caption="<i>KOTO</i> | Choreography by Alonzo King | Photograph by Kyle Scharf | 2015")
+        div.grid-item
+          img(src="../assets/img/dancing/masonry/6.5.jpg" data-action="zoom" data-caption="<i>BIG SALT</i> | Photograph by Summer Wilson for The Anata Project | 2019")
 
     .full-screen-caption
 block scripts
