photo,video -> photos,videos

--- a/index.pug
+++ b/index.pug
@@ -22,8 +22,8 @@ block content
       .menu-item
         span.menu-button  galleries
         ul.sub-menu
-          li: a.site-link(href="/photo" alt="photo") photo
-          li: a.site-link(href="/video" alt="video") video
+          li: a.site-link(href="/photos" alt="photos") photos
+          li: a.site-link(href="/videos" alt="videos") videos
       .menu-item
         span.menu-button.contact contact
       .menu-item
