--- a/photos/index.pug
+++ b/photos/index.pug
@@ -1,13 +1,13 @@
 extends ../pug/_main_template.pug
 block title
-  title Emily Hansel | Media
+  title Emily Hansel | Photos
   link(rel="stylesheet", href="../assets/css/index.css")
 block content
   .media
     .home-button
       a(href="/" alt="Emily")
         img(src="../assets/img/dancing/crop/4.png")
-    h1#photo Photo
+    h1#photo Photos
     .photo-container
       div(class="grid js-masonry" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 266 }')
         
