--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -29,9 +29,9 @@ html
         .nav-item
           a.site-link(href="/digital-art" alt="digital art") digital art
         .nav-item
-          a.site-link(href="/photo" alt="photo") photo
+          a.site-link(href="/photos" alt="photos") photos
         .nav-item
-          a.site-link(href="/video" alt="video") video
+          a.site-link(href="/videos" alt="videos") videos
         .nav-item
           span.contact contact
     .contact-form
