--- a/videos/index.pug
+++ b/videos/index.pug
@@ -1,6 +1,6 @@
 extends ../pug/_main_template.pug
 block title
-  title Emily Hansel | Media
+  title Emily Hansel | Videos
   link(rel="shortcut icon", href="../assets/img/favicon.ico")
   link(rel="icon", href="../assets/img/favicon.ico", type="image/x-icon")
   link(rel="stylesheet", href="../assets/css/index.css")
@@ -10,7 +10,7 @@ block content
       a(href="/" alt="Emily")
         img(src="../assets/img/dancing/crop/5.png")
     .video-container
-      h1 Video
+      h1 Videos
       .card
         iframe.visual(src="https://www.youtube.com/embed/-s8Xh4VSxpA" frameborder="0" allowfullscreen)
       .caption
