--- a/photos/index.pug
+++ b/photos/index.pug
@@ -10,10 +10,7 @@ block content
     .photo-container
       .x
         h1#photo Photos
-        div(class="grid js-masonry" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 316 }')
-          
-          //- each val, index in values
-          //-   img(src="../assets/img/dancing/carousel/" + index + "}.jpg"  width="100%" data-caption=val)
+        div(class="grid js-masonry" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 316, "fitWidth": true }')
           div.grid-item
             img(src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="<i>The Exceptionally Elderly Overweight Black Man Phoenix</i> | Choreography by Robert Moses | Photograph by Jim Coleman | 2019")
           div.grid-item
