--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -33,11 +33,15 @@ body.zoom-overlay-open
     color: white
     margin: 0 auto
     padding: 40px 8px 20px
+    align-self: flex-start
+    margin: 0 0 64px
 
   .photo-container
     display: flex
     flex-wrap: wrap
     justify-content: space-around
+    position: relative
+    margin-top: 32px
 
   .grid
     width: 950px
@@ -59,10 +63,6 @@ body.zoom-overlay-open
   width: 50vw
   left: 50%
   transform: translateX(-50%)
-
-  h1
-    align-self: flex-start
-    margin: 0 0 64px
 
   .card
     border: 4px solid white
