--- a/photos/index.pug
+++ b/photos/index.pug
@@ -47,6 +47,7 @@ block scripts
   script(src="https://code.jquery.com/jquery-3.3.1.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js")
   script(src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js")
+  script(src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js")
   script(src="../assets/js/carousel.js")
   script(src="../assets/js/zoom.js")
   script sessionStorage.seen = true;
