add fourbyfour/ask page and tweak stuff

--- a/index.pug
+++ b/index.pug
@@ -10,22 +10,22 @@ block content
     h4 Choreographer
     ul.menu
       .menu-item
-        span.menu-button about
+        span.menu-button(tabindex=0) about
         ul.sub-menu
           li: a.site-link(href="/bio" alt="bio") bio
           li: a.site-link(href="/assets/resume.pdf" target="_blank" alt="resume") resume
       .menu-item
-        span.menu-button works
+        span.menu-button(tabindex=0) works
         ul.sub-menu
           li: a.site-link(href="/choreography" alt="choreography") choreography
           li: a.site-link(href="/digital-art" alt="digital art statement") digital art
       .menu-item
-        span.menu-button  galleries
+        span.menu-button(tabindex=0)  galleries
         ul.sub-menu
           li: a.site-link(href="/photos" alt="photos") photos
           li: a.site-link(href="/videos" alt="videos") videos
       .menu-item
-        span.menu-button.contact contact
+        span.menu-button(tabindex=0).contact contact
       .menu-item
         span.menu-button
           a(href="https://www.instagram.com/em_hansel/" target="_blank" rel="noreferrer noopener")
