--- a/index.pug
+++ b/index.pug
@@ -1,7 +1,7 @@
 extends ./pug/_main_template.pug
 block title
   title Emily Hansel
-  link(rel="stylesheet", href="./assets/css/index.css")
+  link(rel="stylesheet", href="./assets/css/index.css?v=1")
 block content
   .body-container
     h1
@@ -45,5 +45,5 @@ block content
     img(src='assets/img/dancing/10.png')
     img(src='assets/img/dancing/11.png')
 block scripts
-  script(src="./assets/js/app.js")
+  script(src="./assets/js/app.js?v=1")
   script(src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js")
