--- a/photos/index.pug
+++ b/photos/index.pug
@@ -1,7 +1,7 @@
 extends ../pug/_main_template.pug
 block title
   title Emily Hansel | Photos
-  link(rel="stylesheet", href="../assets/css/index.css")
+  link(rel="stylesheet", href="../assets/css/index.css?v=1")
 block content
   .media
     .home-button
