lots of progress

--- a/digital-art/index.pug
+++ b/digital-art/index.pug
@@ -9,11 +9,11 @@ block content
   .rightImage
     img(src="../assets/img/insatiable.png")
   .body-container.bio
-    .bio-container.digital-art-container
+    .bio-container.digital-art-container.no-animation
       h1 Digital Art
       br 
       br
       br
-      p.no-animation Coming soon
+      p Coming soon
 block scripts
   script sessionStorage.seen = true;
