--- a/fourbyfour/ask.pug
+++ b/fourbyfour/ask.pug
@@ -4,20 +4,20 @@ block title
   link(rel="stylesheet", href="../assets/css/index.css?v=2")
 block content
   .body-container.bio
-    .bio-container
-      p.no-animation.
+    .bio-container.no-animation
+      p.
         Hello respected colleagues and friends,
       
       br
       br
 
-      p.no-animation.
+      p.
         I’m excited to announce that I’ve recently started my own project-based dance company and I'm in the process of producing/choreographing/directing my first show! The performance, titled Four by Four, is an evening-length contemporary dance work that will premiere at ODC Theater in San Francisco on May 26-28, 2022. 
 
-      p.no-animation.
+      p.
         I invite you to 1) mark your calendars for May 26-28, and 2) consider making a monetary gift if you have the capacity to do so.
 
-      p.no-animation.
+      p.
         The artistic team that I’ve hired to collaborate with me on this project is an awesome group of people, including dancers/co-creators Alex Carrington, Mia J. Chong, Shareen DeRyan, and Chelsea Reichert. My collaborators and I are embarking on a creative process guided by the following topics/interests:
       ul 
         li Taking our time. What things can help us to not feel rushed?
@@ -25,10 +25,10 @@ block content
         li Practice ongoing consent.
         li Oppose our capitalist tendencies toward productivity.
 
-      p.no-animation.
+      p.
         Ironically, in order to create this space where we can refuse our capitalist tendencies, we first need to address some economic matters (fundraising, dancer contracts, payment schedules, rehearsal schedules, etc.) head on. These things go hand in hand with another one of my goals in creating Four by Four: to develop and sustain a healthy, equitable workplace for dancers.
 
-      p.no-animation.
+      p.
         So far, here are some of the simple, but radical, things I’ve done toward this goal:
       
       ul
@@ -38,10 +38,10 @@ block content
         li On the first day in the studio, the dancers and I made a community agreement. This included conversation about our comfort levels re: covid, our desire for body positivity, and a discussion of the power dynamic between employer and employees, among other things.
         li I’m paying the dancers a rate of $30/hour. This number is both not enough (the dancers are stunning, versatile, highly skilled individuals and they deserve a lot more) and awesome (because dancers are frequently paid a lot less).
 
-      p.no-animation.
+      p.
         Because I’ve committed to the practices above, it’s important for me to plan my project by working backwards from my budget. My dancers’ wages are my top priority, so I’m scaling back in every other element of production in order to pay them at $30/hour.
 
-      p.no-animation.
+      p.
         I am privileged that Four by Four is being supported by the California Arts Council, ODC Theater, and RoundAntennae. That said, I still have some serious fundraising to do. My goal is to raise $8,000 in donations from individuals in order to make my production come to fruition. I invite you to make a gift of whatever amount feels possible or meaningful to you. To give you some context, I’ve listed out some amounts and their impacts below:
 
       ul
@@ -52,29 +52,29 @@ block content
         li $800 covers a week of rehearsals (2 rehearsals)
         li $1400 covers hiring the lighting designer
 
-      p.no-animation.
+      p.
         I invite you to take a look at my <a href="https://docs.google.com/spreadsheets/d/17Y3JT9glywDPLDD9cYtv2FwYSViGZLAsBNb8fDeneYM/edit?usp=sharing" target="_blank">project budget</a> to learn more about the expenses involved in producing this project.
 
-      p.no-animation.
+      p.
         You can send your gift via Venmo (@EmilyHansel), Paypal (<a href="http://paypal.me/emhansel" target="_blank">paypal.me/emhansel</a>), or paper check (made out to Emily Hansel and mailed to 475 Arlington St, San Francisco, CA 94131).
 
-      p.no-animation.
+      p.
         Thank you for considering making a gift to help me reach my $8,000 goal. I hope to see you May 26-28 at the theater.
 
-      p.no-animation.
+      p.
         Please feel free to <a href="mailto:emily@emilyhansel.me" target="_blank">reach out</a> if you have any questions or if you’re interested in talking about the project.
 
       br
       br
 
-      p.no-animation.
+      p.
         Warmly,<br/>
         Emily
 
       br
       br
 
-      p.no-animation.
+      p.
         PS - here’s a photo of Chelsea, me, Alex, Shareen, and Mia after our first rehearsal on February 1st. We’re smiling under those masks ;)
 
       br
