--- a/fourbyfour/index.pug
+++ b/fourbyfour/index.pug
@@ -4,9 +4,11 @@ block title
   link(rel="stylesheet", href="../assets/css/index.css?v=2")
 block content
   .body-container.bio
+    h1
+      a(href="/fourbyfour")
+        img(class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="600px")
     .bio-container.no-animation
       .heading 
-        h1 Four by Four
         p 
           ul
             li May 26-28, 2022
@@ -17,8 +19,14 @@ block content
             li Friday, May 27 at 7:00 pm
             li Saturday, May 28 at 4:00 pm
 
-        a(href="")
-          button Buy tickets
+          a(href="")
+            button Buy tickets
+        
+      .image-bar 
+        img(src="../../assets/img/fourbyfour/shareen.jpg" alt="Shareen DeRyan dancing")
+        img(src="../../assets/img/fourbyfour/mia.jpg" alt="Mia J. Chong")
+        img(src="../../assets/img/fourbyfour/chelsea.jpg" alt="Chelsea Reichert dancing")
+        img(src="../../assets/img/fourbyfour/alex.jpg" alt="Alex Carrington")
 
       p Choreographed by Emily Hansel and co-created by dancers Alex Carrington, Mia J. Chong, Shareen DeRyan, and Chelsea Reichert, <i>Four by Four</i> is a messy attempt at refusing productivity. Since beginning work in November 2021, the artists have been practicing the radical act of not knowing. They’ve been fighting their capitalist tendencies, taking their time, embracing messiness, and prioritizing adaptability. <i>Four by Four</i>, featuring original music composed by Sophia Cotraccia and Bed Juodvalkis and lighting design by Thomas Bowersox, is a contemporary dance that is simultaneously light-hearted, serious, ordinary, and one-of-a-kind.
 
