adjust image title

--- a/fourbyfour/index.pug
+++ b/fourbyfour/index.pug
@@ -6,7 +6,7 @@ block content
   .body-container.bio
     h1
       a(href="/fourbyfour")
-        img(class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="600px")
+        img(class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%")
     .bio-container.no-animation
       .heading 
         p 
